--- a/modelo/modelo/index.html
+++ b/modelo/modelo/index.html
@@ -13,12 +13,7 @@
 
   <section class="container">
     <h1>Lorem ipsum dolor sit amet</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      Repellendus nisi explicabo saepe voluptatibus consequuntur et corporis
-      maxime quos, doloribus vitae voluptatum quisquam necessitatibus
-      pariatur veritatis exercitationem beatae officiis suscipit Ea!
-    </p>
+    <!-- Written the texts here -->
   </section>
 
   <script src="./assets/js/main.js"></script>
